--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 
  <!-- run all the JavaScript stuff -->
  <!-- Include the processing.js library -->
- <script src="./processing-1.4.8.min.js.download"></script>
+ <script src="./processing-1.4.8.min.js"></script>
 
  <!-- The name of the Program Source Code goes here -->
  <script src="./template.js"></script>
